--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Riskgraph.ai
-description: Red flags for drug research
+description: Help patients understand their clinical trials using baseball metrics
